graphs better look